--- a/app/src/main/res/layout/activity_pref_changing.xml
+++ b/app/src/main/res/layout/activity_pref_changing.xml
@@ -26,7 +26,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="350dp"
             android:background="@color/white"
             android:gravity="center_horizontal"
             android:orientation="vertical">
@@ -38,8 +38,8 @@
                 android:layout_marginTop="30dp"
                 android:text="Change your preferences!"
                 android:textAlignment="center"
-                android:textSize="20dp"
                 android:textColor="@color/Lime"
+                android:textSize="20dp"
                 app:layout_constraintBottom_toTopOf="@+id/ChangecountryAutoComplete"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.496"
@@ -51,58 +51,61 @@
                 android:layout_width="165dp"
                 android:layout_height="52dp"
                 android:layout_marginTop="1dp"
-                app:layout_constraintStart_toEndOf="@+id/CountryText"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintHorizontal_bias="0.157"
+                app:layout_constraintStart_toEndOf="@+id/CountryText"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.238">
 
                 <AutoCompleteTextView
                     android:id="@+id/ChangecountryAutoComplete"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Country"
                     android:drawableLeft="@drawable/country"
-                    android:drawablePadding="8dp" />
+                    android:drawablePadding="8dp"
+                    android:hint="Country" />
             </ScrollView>
+            <TextView
+                android:id="@+id/activityHead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Activity"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <ScrollView
+            <Spinner
+                android:id="@+id/activitySpinner"
+                android:layout_marginTop="1dp"
                 android:layout_width="165dp"
                 android:layout_height="52dp"
-                android:layout_marginTop="1dp"
-                app:layout_constraintStart_toEndOf="@+id/CountryText"
+                android:spinnerMode="dropdown"
+                app:layout_constraintTop_toBottomOf="@id/activityHead"
+                app:layout_constraintStart_toStartOf="@id/activityHead"
+                app:layout_constraintEnd_toEndOf="@id/activityHead"/>
+
+            <TextView
+                android:id="@+id/hobbyHead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hobby"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="0.157"
-                app:layout_constraintVertical_bias="0.238">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <AutoCompleteTextView
-                    android:id="@+id/ChangeactivityAutoComplete"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="Activity"
-                    android:drawableLeft="@drawable/sport"
-                    android:drawablePadding="8dp" />
-            </ScrollView>
-
-            <ScrollView
+            <Spinner
+                android:id="@+id/hobbySpinner"
+                android:layout_marginTop="1dp"
                 android:layout_width="165dp"
                 android:layout_height="52dp"
-                android:layout_marginTop="1dp"
-                app:layout_constraintStart_toEndOf="@+id/CountryText"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="0.157"
-                app:layout_constraintVertical_bias="0.238">
-
-                <AutoCompleteTextView
-                    android:id="@+id/ChangehobbyAutoComplete"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="Hobby"
-                    android:drawableLeft="@drawable/hobby"
-                    android:drawablePadding="8dp" />
-            </ScrollView>
+                android:spinnerMode="dropdown"
+                app:layout_constraintTop_toBottomOf="@id/hobbyHead"
+                app:layout_constraintStart_toStartOf="@id/hobbyHead"
+                app:layout_constraintEnd_toEndOf="@id/hobbyHead"/>
 
             <Button
                 android:id="@+id/PersChangeButton"
@@ -119,4 +122,5 @@
         </LinearLayout>
     </LinearLayout>
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
