Upgraded side menu,added bottom bar with buttons, added a dev button for instant login

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,41 +20,11 @@
             android:id="@+id/Account_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/main_account_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/Logout_button"
-            android:layout_width="162dp"
-            android:layout_height="49dp"
-            android:layout_marginBottom="16dp"
-            android:backgroundTint="#74c69d"
-            android:text="Log out"
-            android:textSize="15sp"
-            app:cornerRadius="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Name_Text"
-            app:layout_constraintVertical_bias="0.899" />
-
-        <TextView
-            android:id="@+id/Name_Text"
-            android:layout_width="204dp"
-            android:layout_height="60dp"
-            android:gravity="center"
-            android:text="Unusual Holiday Calendar"
-            android:textSize="17dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.098" />
 
         <LinearLayout
             android:id="@+id/topBar"
@@ -123,6 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
         app:menu="@menu/sidebar" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
