--- a/app/src/main/res/menu/sidebar.xml
+++ b/app/src/main/res/menu/sidebar.xml
@@ -2,17 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="HardcodedText">
-
-    <item
-        android:id="@+id/nav_preferences"
-        android:title="Change preferences" />
-
-    <item
-        android:id="@+id/nav_settings"
-        android:title="Settings" />
-
-    <item
-        android:id="@+id/nav_logout"
-        android:title="Logout" />
-
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_profile"
+            android:title="Profile"
+            android:icon="@drawable/baseline_account_circle_24" />
+        <item
+            android:id="@+id/nav_preferences"
+            android:title="Change preferences"
+            android:icon="@drawable/preference" />
+        <item
+            android:id="@+id/nav_settings"
+            android:title="Settings"
+            android:icon="@drawable/settings" />
+        <item
+            android:id="@+id/Logout_button"
+            android:title="Logout"
+            android:icon="@drawable/logout" />
+    </group>
 </menu>
