--- a/app/src/main/res/layout/activity_calendar_view.xml
+++ b/app/src/main/res/layout/activity_calendar_view.xml
@@ -26,4 +26,15 @@
         android:layout_below="@id/idTVDate"
         android:layout_marginTop="30dp" />
 
+    <Button
+        android:id="@+id/addHolidayButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/calendarView"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="85dp"
+        android:layout_marginEnd="152dp"
+        android:text="Add holiday" />
+
 </RelativeLayout>
