--- a/app/src/main/res/layout/activity_calendar_view.xml
+++ b/app/src/main/res/layout/activity_calendar_view.xml
@@ -54,4 +54,13 @@
         android:layout_marginTop="80dp"
         android:text="Add holiday" />
 
+    <Button
+        android:id="@+id/editHolidayButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/addHolidayButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Edit Holiday" />
+
 </RelativeLayout>
