--- a/app/src/main/res/layout/activity_calendar_view.xml
+++ b/app/src/main/res/layout/activity_calendar_view.xml
@@ -59,6 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/addHolidayButton"
+        android:drawableLeft="@drawable/baseline_date_range_24"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:text="Edit Holiday" />
