--- a/app/src/main/res/layout/activity_login_new.xml
+++ b/app/src/main/res/layout/activity_login_new.xml
@@ -74,7 +74,7 @@
                 android:layout_height="45dp"
                 android:layout_marginRight="90dp"
                 android:text="Remember me"
-                android:buttonTint="@color/black"
+                android:buttonTint="@color/Lime"
                 android:textColor="@color/Lime"
                 android:textSize="14dp"
                 android:textStyle="bold"
