--- a/app/src/main/res/layout/activity_register_new.xml
+++ b/app/src/main/res/layout/activity_register_new.xml
@@ -66,7 +66,7 @@
                 android:layout_marginTop="10dp"
                 android:padding="8dp"
                 android:hint="Username"
-                android:drawableLeft="@drawable/baseline_account_circle_24"
+                android:drawableLeft="@drawable/account"
                 android:drawablePadding="8dp"
                 android:textColor="@color/black"/>
 
