--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="300dp"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView_profile"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/View_Image2"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/account"
-        android:scaleType="centerCrop"
-        android:layout_gravity="center">
-
-    </ImageView>
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/circle_background"
+         />
 
 
     <TextView
