--- a/app/src/main/res/layout/activity_add_holiday.xml
+++ b/app/src/main/res/layout/activity_add_holiday.xml
@@ -43,19 +43,25 @@
                 android:layout_marginTop="8dp"
                 android:hint="Select a country" />
 
-            <Button
-                android:id="@+id/hobbiesButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Select Hobbies"
-                android:layout_marginTop="8dp" />
+            <Spinner
+                android:id="@+id/activitySpinner"
+                android:layout_marginTop="1dp"
+                android:layout_width="165dp"
+                android:layout_height="52dp"
+                android:spinnerMode="dropdown"
+                app:layout_constraintTop_toBottomOf="@id/activityHead"
+                app:layout_constraintStart_toStartOf="@id/activityHead"
+                app:layout_constraintEnd_toEndOf="@id/activityHead"/>
 
-            <Button
-                android:id="@+id/activitiesButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Select Activities"
-                android:layout_marginTop="8dp" />
+            <Spinner
+                android:id="@+id/hobbySpinner"
+                android:layout_marginTop="1dp"
+                android:layout_width="165dp"
+                android:layout_height="52dp"
+                android:spinnerMode="dropdown"
+                app:layout_constraintTop_toBottomOf="@id/hobbyHead"
+                app:layout_constraintStart_toStartOf="@id/hobbyHead"
+                app:layout_constraintEnd_toEndOf="@id/hobbyHead"/>
 
             <Button
                 android:id="@+id/saveButton"
