Edycja ale niedokonczona

--- a/app/src/main/res/layout/activity_edit_holiday.xml
+++ b/app/src/main/res/layout/activity_edit_holiday.xml
@@ -12,9 +12,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="36dp"
-        app:cardCornerRadius="36dp"
-        app:cardElevation="20dp">
+        android:layout_margin="16dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,30 +23,45 @@
             android:gravity="center"
             android:padding="24dp">
 
-            <TextView
-                android:id="@+id/editHolidayText"
-                android:layout_width="278dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Edit your holiday!"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
             <android.widget.CalendarView
                 android:id="@+id/calendarView"
-                android:layout_width="278dp"
-                android:layout_height="300dp"
-                android:layout_marginTop="20dp"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp" />
 
             <EditText
                 android:id="@+id/holidayNameEditText"
-                android:layout_width="278dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:hint="Enter holiday name" />
+
+            <AutoCompleteTextView
+                android:id="@+id/countryAutoComplete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="Select a country" />
+
+            <Spinner
+                android:id="@+id/activitySpinner"
+                android:layout_marginTop="1dp"
+                android:layout_width="165dp"
                 android:layout_height="52dp"
-                android:layout_marginTop="20dp"
-                android:hint="Enter Holiday Name"
-                android:drawableLeft="@drawable/baseline_celebration_24"
-                android:drawablePadding="8dp" />
+                android:spinnerMode="dropdown"
+                app:layout_constraintTop_toBottomOf="@id/activityHead"
+                app:layout_constraintStart_toStartOf="@id/activityHead"
+                app:layout_constraintEnd_toEndOf="@id/activityHead"/>
+
+            <Spinner
+                android:id="@+id/hobbySpinner"
+                android:layout_marginTop="1dp"
+                android:layout_width="165dp"
+                android:layout_height="52dp"
+                android:spinnerMode="dropdown"
+                app:layout_constraintTop_toBottomOf="@id/hobbyHead"
+                app:layout_constraintStart_toStartOf="@id/hobbyHead"
+                app:layout_constraintEnd_toEndOf="@id/hobbyHead"/>
 
             <Button
                 android:id="@+id/updateButton"
